# SurvOT-Rank-

./: .gitignore  EXPERIMENTS.md  EXPERIMENT_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  README.md  V45_ANALYSIS.md  __init__.py  analysis_plots.py  args.py  backbone.py  collect_results.py  deepseek.md  ensemble_eval.py  fold_tracker.py  monitor_batch.py  monitor_training.py  paths.py  pyproject.toml  requirements.txt  run_brca_luad_sequential.sh  run_v45_30ep.sh  run_v45_5fold_30ep.bat  train.py
50_otehv2_timelocal_competing/: README.md  args.py  model.py  model_v45.py  paths.py  smoke_test.py  train.py
configs/: censoring_aware_temporal_evidence_transport_blca.yaml  cohort_anchored_adaptive_prognostic_slot_attention_blca.yaml  distributional_counterfactual_transport_blca.yaml  distributional_counterfactual_transport_brca.yaml  distributional_counterfactual_transport_brca_highscore.yaml  distributional_counterfactual_transport_brca_norank_control.yaml  distributional_counterfactual_transport_brca_stable.yaml  distributional_counterfactual_transport_coadread.yaml  distributional_counterfactual_transport_hnsc.yaml  distributional_counterfactual_transport_kirc.yaml  distributional_counterfactual_transport_luad.yaml  distributional_counterfactual_transport_luad_formal.yaml  distributional_counterfactual_transport_lusc.yaml  distributional_counterfactual_transport_lusc_formal.yaml  distributional_counterfactual_transport_skcm.yaml  distributional_counterfactual_transport_stad.yaml  distributional_counterfactual_transport_ucec.yaml  faithful_evidence_transport_blca.yaml  (+18 more)
(+231 files in other folders)
